# emu_nds

./: Makefile.am  configure.ac
src/: apu.c  apu.h  cpu.c  cpu.h  gpu.c  gpu.h  mbc.c  mbc.h  mem.c  mem.h  nds.c  nds.h
src/cpu/: arm.c  instr.h  thumb.c
src/libretro/: libretro.c
